--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "dev": "vite --port 4050",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "next lint",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write ./src/**/*.{js,ts,jsx,tsx,css,scss}",
+    "prettier:check": "prettier --check --ignore-path .prettierignore ."
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "clsx": "^2.1.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
+    "prettier": "^3.2.4",
+    "tailwind-merge": "^2.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
