--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier:check": "prettier --check --ignore-path .prettierignore ."
   },
   "dependencies": {
+    "antd": "^5.15.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
@@ -24,16 +25,16 @@
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
-    "clsx": "^2.1.0",
-    "eslint-plugin-unused-imports": "^3.0.0",
-    "prettier": "^3.2.4",
-    "tailwind-merge": "^2.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
+    "clsx": "^2.1.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.4",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.6"
