--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier:check": "prettier --check --ignore-path .prettierignore ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.2",
     "antd": "^5.15.2",
     "path": "^0.12.7",
     "react": "^18.2.0",
