--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "antd": "^5.15.2",
+    "dayjs": "^1.11.10",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "sass": "^1.72.0"
   },
