--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,7 @@
       "@styles/*": ["./src/@styles/*"]
     },
 
-    "typeRoots": ["./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types", "types"]
   },
   "include": ["src"],
   "exclude": ["node_modules"],
