--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.15.2",
     "dayjs": "^1.11.10",
     "path": "^0.12.7",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
